--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var day = now.getDay();
 
 
      if (day == 0 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri </h3>"); 
+    document.write("<h3><b>Evening | 16-24</b><br>Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri </h3>"); 
 }
 
 else if (day == 0 && hour > 7 && hour < 16 ) { 
@@ -47,7 +47,7 @@ else if (day == 0 && hour > 15 ) {
 }
 
 else if (day == 1 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Bader Kayed + Mohammad Haj Ali + Ahmad Odeh</h3>"); 
+    document.write("<h3><b>Evening | 16-24</b><br>Bader Kayed + Mohammad Haj Ali + Ahmad Odeh</h3>"); 
 }
 
 else if (day == 1 && hour > 7 && hour < 16 ) { 
@@ -59,7 +59,7 @@ else if (day == 1 && hour > 15 ) {
 }
 
 else if (day == 2 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Mohammad Ghanem + Ahmad Odeh + Haytham Sadeq</h3>"); 
+    document.write("<h3><b>Evening | 16-24</b><br>Mohammad Ghanem + Ahmad Odeh + Haytham Sadeq</h3>"); 
 }
 
 else if (day == 2 && hour > 7 && hour < 16 ) { 
@@ -71,7 +71,7 @@ else if (day == 2 && hour > 15 ) {
 }
 
 else if (day == 3 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Ali Batanjeh + Hayyan Mosallam</h3>"); 
+    document.write("<h3><b>Evening | 16-24</b><br>Ali Batanjeh + Hayyan Mosallam</h3>"); 
 }
 
 else if (day == 3 && hour > 7 && hour < 16 ) { 
@@ -83,7 +83,7 @@ else if (day == 3 && hour > 15 ) {
 }
 
 else if (day == 4 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Mu'een Dado' + Bader Kayed </h3>"); 
+    document.write("<h3><b>Evening | 16-24</b><br>Mu'een Dado' + Bader Kayed </h3>"); 
 }
 
 else if (day == 4 && hour > 7 && hour < 16 ) { 
@@ -95,7 +95,7 @@ else if (day == 4 && hour > 15 ) {
 }
 
 else if (day == 5 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Mohammad Ghanem + Mohammad Al Asmar </h3>");
+    document.write("<h3><b>Evening | 16-24</b><br>Mohammad Ghanem + Mohammad Al Asmar </h3>");
 }
 
 else if (day == 5 && hour > 7 && hour < 16 ) { 
@@ -107,7 +107,7 @@ else if (day == 5 && hour > 15 ) {
 }
 
 else if (day == 6 && hour < 8 ) { 
-    document.write("<h3><b>Evening | 16-24:</b><br>Ali Batanjeh + Mohammad Haj Ali</h3>");
+    document.write("<h3><b>Evening | 16-24</b><br>Ali Batanjeh + Mohammad Haj Ali</h3>");
 }
 
 else if (day == 6 && hour > 7 && hour < 16) { 
