--- a/index.html
+++ b/index.html
@@ -348,15 +348,15 @@ else if (day == 5 && hour > 15 ) {
 }
 
 else if (day == 6 && hour < 8 ) { 
-    document.write("<h3><b>Morning | 08-16</b>Ahmad Odeh + Haytham Sadeq <br></h3>");
+    document.write("<h3><b>Morning | 08-16</b><br>Ahmad Odeh + Haytham Sadeq <br></h3>");
 }
 
 else if (day == 6 && hour > 7 && hour < 16) { 
-    document.write("<h3><b>Evening | 16-24</b>Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri<br></h3>");
+    document.write("<h3><b>Evening | 16-24</b><br>Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri<br></h3>");
 }
 
 else if (day == 6 && hour > 15 ) { 
-    document.write("<h3><b>Night | 00-08</b>Hayyan Mosallam + Mohammad Shukri <br> </h3>");
+    document.write("<h3><b>Night | 00-08</b><br>Hayyan Mosallam + Mohammad Shukri <br> </h3>");
 }
 </script>
 
@@ -377,7 +377,7 @@ document.write ('<body style="background-color: #ADD8E6">');
 }
 
 else if (hours > 15){
-document.write ('<body style= "background-color: #FFA500">');
+document.write ('<body style= "background-color: #CC6600">');
 }
 
 else if (hours < 8){
@@ -428,20 +428,11 @@ left:30px;}
 <br><br>
 <hr>
 
-<h2>Shifts/Employees distribution :</h2>
-
-<b>3 Morning - 1 Evening -1 Night :</b>
-<br>
-Mu'een | Haytham | M.Shukri | M.AlAsmar</b>
-<br><br>
-<b>1 Morning - 2 Evening - 2 Night :</b>
-<br>
-Ali | M.HajAli | Hayyan | Bader
-<br><br>
-<b>3 Evening -2 Night : </b>M.Ghanem <br><br>
-<b>3 Morning -2 Evening :</b> Ahmad Odeh
 
 
+<p style="text-align: center;">
+ali.batanjeh@jawwal.ps
+</p>
 
 </body>
 </html>
