--- a/index.html
+++ b/index.html
@@ -406,7 +406,39 @@ left:30px;}
   
 </style>
 
-<bodybackground="text71124191.jpg" >
+<bodybackground="pattern_152.gif" >
+
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+
+</body>
+<script type="text/javascript">
+var now = new Date();
+var hours = now.getHours();
+
+
+document.bgColor="#CC9900";
+
+
+if (hours > 7 && hours < 16){
+ document.body.background = "pattern_062.gif";
+}
+
+else if (hours > 15){
+ document.body.background = "sand-blossom.gif";
+}
+
+else if (hours < 8){
+document.body.background = "ss049.gif";
+}
+else {
+document.write ('<body style="background-color: white">');
+}
+</script>
+
 </body>
 
 
@@ -426,7 +458,7 @@ var t1 = "[00-08]";
 var t2 = "[08-16]";
 var t3 = "[16-24]"
 var f22 = "Ahmad Odeh  +  Mohammad Shukri <br>[16-24]<br> Ali Batanjeh  +  Mohammad Haj Ali"
-var mm2 = "<br>[00-08]<br> Mohammad Ghanem  +  Mohammad Al Asmar"
+var mm22 = "<br>[00-08]<br> Mohammad Ghanem  +  Mohammad Al Asmar"
 var f1 = "<hr><h1> Weekly schedule </h1><b>Saturday </b><br>[00-08]<br> Ali Batanjeh  +  Mohammad Haj Ali<br>[08-16]<br> Ahmad Odeh  +  Haytham Sadeq <br>[16-24]<br> Mohammad Ghanem  +  Hayyan Mosallam  +  Mohammad Shukri<br><br><b>Sunday </b><br>[00-08]<br> Hayyan Mosallam  +  Mohammad Shukri <br>[08-16]<br> Mu'een Dado'  +  Ali Batanjeh  +  Haytham Sadeq <br>[16-24]<br> Bader Kayed  +  Mohammad Haj Ali  +  Ahmad Odeh<br><br><b>Monday </b><br>[00-08]<br> Bader Kayed  +  Mohammad Haj Ali <br>[08-16]<br> Hayyan Mosallam + Mu'een Dado'  +  Mohammad Al Asmar <br>[16-24]<br> Mohammad Ghanem  +  Ahmad Odeh  +  Haytham Sadeq<br><br><b>Tuesday </b><br>[00-08]<br> Mohammad Ghanem  +  Haytham Sadeq <br>[08-16]<br> Mu'een Dado'  +  Bader Kayed  +  Mohammad Al Asmar <br>[16-24]<br> Ali Batanjeh + Hayyan Mosallam<br><br><b>Wednesday </b><br>[00-08]<br> Ali Batanjeh  +  Hayyan Mosallam<br>[08-16]<br> Mohammad Shukri  +  Mohammad Al Asmar  +  Haytham Sadeq <br>[16-24]<br> Mu'een Dado'  +  Bader Kayed<br><br><b>Thursday </b><br>[00-08]<br> Mu'een Dado'  +  Bader Kayed <br>[08-16]<br> Ahmad Odeh  +  Mohammad Shukri  +  Mohammad Haj Ali <br>[16-24]<br> Mohammad Ghanem  +  Mohammad Al Asmar<br>"
 var f2 = "Mohammad Ghanem + Mohammad Al Asmar <br>[08-16]<br> Ahmad Odeh  +  Mohammad Shukri <br>[16-24]<br> Ali Batanjeh  +  Mohammad Haj Ali"
 
@@ -454,7 +486,7 @@ var su22 = "Mu'een Dado' + Ali Batanjeh + Haytham Sadeq <br>[16-24]<br> Bader Ka
 var su21 = "[00-08]<br> Hayyan Mosallam + Mohammad Shukri"
 
 var su3 = "[00-08]<br> Hayyan Mosallam + Mohammad Shukri <br>[08-16]<br> Mu'een Dado' + Ali Batanjeh + Haytham Sadeq"
-var su4 = "Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri<br><br><b>Sunday </b><br>[00-08]<br> Hayyan Mosallam + Mohammad Shukri <br>[08-16]<br> Mu'een Dado' + Ali Batanjeh + Haytham Sadeq <br>[16-24]<br> Bader Kayed + Mohammad Haj Ali + Ahmad Odeh<br><br><b>Monday </b><br>[00-08]<br> Bader Kayed + Mohammad Haj Ali <br>[08-16]<br> Hayyan Mosallam + Mu'een Dado' + Mohammad Al Asmar <br>[16-24]<br> Mohammad Ghanem + Ahmad Odeh + Haytham Sadeq<br><br><b>Tuesday </b><br>[00-08]<br> Mohammad Ghanem + Haytham Sadeq <br>[08-16]<br> Mu'een Dado' + Bader Kayed + Mohammad Al Asmar <br>[16-24]<br> Ali Batanjeh + Hayyan Mosallam<br><br><b>Wednesday </b><br>[00-08]<br> Ali Batanjeh + Hayyan Mosallam <br>[08-16]<br> Mohammad Shukri + Mohammad Al Asmar + Haytham Sadeq <br>[16-24]<br> Mu'een Dado' + Bader Kayed<br><br><b>Thursday </b><br>[00-08]<br> Mu'een Dado'+ Bader Kayed <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri + Mohammad Haj Ali <br>[16-24]<br> Mohammad Ghanem + Mohammad Al Asmar<br><br><b>Friday </b><br>[00-08]<br> Mohammad Ghanem + Mohammad Al Asmar <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri <br>[16-24]<br> Ali Batanjeh + Mohammad Haj Ali"
+var su4 = "Bader Kayed + Mohammad Haj Ali + Ahmad Odeh<br><br><b>Monday </b><br>[00-08]<br> Bader Kayed + Mohammad Haj Ali <br>[08-16]<br> Hayyan Mosallam + Mu'een Dado' + Mohammad Al Asmar <br>[16-24]<br> Mohammad Ghanem + Ahmad Odeh + Haytham Sadeq<br><br><b>Tuesday </b><br>[00-08]<br> Mohammad Ghanem + Haytham Sadeq <br>[08-16]<br> Mu'een Dado' + Bader Kayed + Mohammad Al Asmar <br>[16-24]<br> Ali Batanjeh + Hayyan Mosallam<br><br><b>Wednesday </b><br>[00-08]<br> Ali Batanjeh + Hayyan Mosallam <br>[08-16]<br> Mohammad Shukri + Mohammad Al Asmar + Haytham Sadeq <br>[16-24]<br> Mu'een Dado' + Bader Kayed<br><br><b>Thursday </b><br>[00-08]<br> Mu'een Dado'+ Bader Kayed <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri + Mohammad Haj Ali <br>[16-24]<br> Mohammad Ghanem + Mohammad Al Asmar<br><br><b>Friday </b><br>[00-08]<br> Mohammad Ghanem + Mohammad Al Asmar <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri <br>[16-24]<br> Ali Batanjeh + Mohammad Haj Ali"
 
 var m1 = "<hr><h1> Weekly schedule </h1><b>Saturday </b><br>[00-08]<br> Ali Batanjeh + Mohammad Haj Ali<br>[08-16]<br> Ahmad Odeh + Haytham Sadeq <br>[16-24]<br> Mohammad Ghanem + Hayyan Mosallam + Mohammad Shukri<br><br><b>Sunday </b><br>[00-08]<br> Hayyan Mosallam + Mohammad Shukri <br>[08-16]<br> Mu'een Dado' + Ali Batanjeh + Haytham Sadeq <br>[16-24]<br> Bader Kayed + Mohammad Haj Ali + Ahmad Odeh<br><br>"
 var m2 = "Bader Kayed + Mohammad Haj Ali <br>[08-16]<br> Hayyan Mosallam + Mu'een Dado' + Mohammad Al Asmar <br>[16-24]<br> Mohammad Ghanem + Ahmad Odeh + Haytham Sadeq<br><br><b>Tuesday </b><br>[00-08]<br> Mohammad Ghanem + Haytham Sadeq <br>[08-16]<br> Mu'een Dado' + Bader Kayed + Mohammad Al Asmar <br>[16-24]<br> Ali Batanjeh + Hayyan Mosallam<br><br><b>Wednesday </b><br>[00-08]<br> Ali Batanjeh + Hayyan Mosallam <br>[08-16]<br> Mohammad Shukri + Mohammad Al Asmar + Haytham Sadeq <br>[16-24]<br> Mu'een Dado' + Bader Kayed<br><br><b>Thursday </b><br>[00-08]<br> Mu'een Dado'+ Bader Kayed <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri + Mohammad Haj Ali <br>[16-24]<br> Mohammad Ghanem + Mohammad Al Asmar<br><br><b>Friday </b><br>[00-08]<br> Mohammad Ghanem + Mohammad Al Asmar <br>[08-16]<br> Ahmad Odeh + Mohammad Shukri <br>[16-24]<br> Ali Batanjeh + Mohammad Haj Ali"
@@ -560,11 +592,11 @@ else if (day == 5 && hour < 8 ) {
 }
 
 else if (day == 5 && hour > 7 && hour < 16 ) { 
-    document.write("" + f1.fontcolor("black") + "") & document.write("<b><br>" + f.fontcolor("red") + "</b>") & document.write("<br>" + mm2.fontcolor("black") + "") & document.write("<br>" + t2.fontcolor("red") + "") & document.write("<br>" + f22.fontcolor("black") + "");
+    document.write("" + f1.fontcolor("black") + "") & document.write("<b><br>" + f.fontcolor("red") + "</b>") & document.write("<br>" + mm22.fontcolor("black") + "") & document.write("<br>" + t2.fontcolor("red") + "") & document.write("<br>" + f22.fontcolor("black") + "");
 }
 
 else if (day == 5 && hour > 15 ) { 
-    document.write("" + f11.fontcolor("black") + "") & document.write("<b>" + f.fontcolor("red") + "</b>") & document.write("<br>" + f33.fontcolor("black") + "") & document.write("<br>" + t3.fontcolor("red") + "") & document.write("<br>" + aa.fontcolor("black") + ""); 
+    document.write("" + f11.fontcolor("black") + "") & document.write("" + f.fontcolor("red") + "</b>") & document.write("<br>" + f33.fontcolor("black") + "") & document.write("<br>" + t3.fontcolor("red") + "") & document.write("<br>" + aa.fontcolor("black") + ""); 
 }
 
 else if (day == 6 && hour < 8 ) { 
@@ -589,10 +621,4 @@ ali.batanjeh@jawwal.ps
 
 </body>
 </html>
-<!-- Hosting24 Analytics Code -->
-<script type="text/javascript" src="http://stats.hosting24.com/count.php"></script>
-<!-- End Of Analytics Code -->
 
-<!-- Hosting24 Analytics Code -->
-<script type="text/javascript" src="http://stats.hosting24.com/count.php"></script>
-<!-- End Of Analytics Code -->
